Modificacion Hysteresis Experiment, se añadió una forma mas simple de exportar mediciones